--- a/front/index.html
+++ b/front/index.html
@@ -3,21 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Quiz LPS</title>
+<title>LPS Jogos</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="container">
-    <h1 id="tema-titulo">Quiz LPS</h1>
+    <h1 id="tema-titulo">LPS Jogos</h1>
 
+    <!-- Menu principal -->
     <div id="menu" class="center">
-        <h2>Selecione o tema</h2>
+        <h2>Escolha o jogo</h2>
+        <button onclick="selecionarJogo('quiz')">Quiz</button>
+        <button onclick="selecionarJogo('memory')">Memory Game</button>
+    </div>
+
+    <!-- Menu do Quiz -->
+    <div id="quiz-menu" style="display:none;">
+        <h2>Selecione o tema do Quiz</h2>
         <button onclick="selecionarTema('geografia')">Geografia</button>
         <button onclick="selecionarTema('filmes')">Filmes</button>
         <button onclick="selecionarTema('historia')">História</button>
-        <button onclick="selecionarTema('technology')">Tecnologia</button>
+        <button onclick="selecionarTema('tecnologia')">Tecnologia</button>
     </div>
 
+    <!-- Dificuldade do Quiz -->
     <div id="dificuldade" style="display:none;">
         <h2>Escolha a dificuldade</h2>
         <button onclick="iniciarQuiz('facil')">Fácil</button>
@@ -26,6 +35,7 @@
         <button onclick="iniciarQuiz('todos')">Todos</button>
     </div>
 
+    <!-- Quiz -->
     <div id="quiz" style="display:none;">
         <p id="pergunta" class="pergunta"></p>
         <div id="alternativas" class="alternativas"></div>
@@ -35,103 +45,72 @@
         <button id="btn-proxima" onclick="proximaPergunta()" style="display:none;">Próxima Pergunta</button>
     </div>
 
+    <!-- Resultado Quiz -->
     <div id="resultadoFinal" style="display:none;">
         <h2>Fim do Quiz!</h2>
         <p id="pontuacao" class="resultado"></p>
         <button onclick="voltarMenu()">Voltar ao Menu</button>
     </div>
+
+    <!-- Memory Game -->
+    <div id="memory-menu" style="display:none;">
+        <h2>Selecione tema do Memory Game</h2>
+        <button onclick="selecionarMemoryTema('filmes')">Filmes</button>
+        <button onclick="selecionarMemoryTema('geografia')">Geografia</button>
+        <button onclick="selecionarMemoryTema('historia')">História</button>
+        <button onclick="selecionarMemoryTema('tecnologia')">Tecnologia</button>
+    </div>
+
+    <div id="memory-dificuldade" style="display:none;">
+        <h2>Escolha a dificuldade</h2>
+        <button onclick="iniciarMemory(dificuldade='facil')">Fácil</button>
+        <button onclick="iniciarMemory(dificuldade='medio')">Médio</button>
+        <button onclick="iniciarMemory(dificuldade='dificil')">Difícil</button>
+    </div>
+
+    <div id="memory-game" style="display:none;">
+        <h2 id="memory-titulo">Memory Game</h2>
+        <div id="tabuleiro" class="tabuleiro"></div>
+        <p id="pontuacaoMemory">Pares encontrados: 0</p>
+        <button onclick="voltarMenu()">Voltar ao Menu</button>
+    </div>
 </div>
 
+<script src="js/quiz.js"></script>
+<script src="js/memory.js"></script>
 <script>
-let perguntas = [];
-let indice = 0;
-let pontos = 0;
-let temaAtual = "";
-let dificuldadeAtual = "todos";
+let jogoAtual = "";
 
-function selecionarTema(tema) {
-    temaAtual = tema;
+// Seleciona o jogo
+function selecionarJogo(jogo) {
+    jogoAtual = jogo;
     document.getElementById("menu").style.display = "none";
-    document.getElementById("dificuldade").style.display = "block";
-}
 
-async function iniciarQuiz(dificuldade) {
-    dificuldadeAtual = dificuldade;
-    const response = await fetch(`https://quiz-lps.onrender.com/perguntas/${temaAtual}`);
-    let data = await response.json();
-
-    // filtra por dificuldade
-    perguntas = data.filter(q => dificuldade === "todos" || q.dificuldade === dificuldade);
-
-    indice = 0;
-    pontos = 0;
-
-    document.getElementById("dificuldade").style.display = "none";
-    document.getElementById("resultadoFinal").style.display = "none";
-    document.getElementById("quiz").style.display = "block";
-
-    document.getElementById("tema-titulo").textContent = temaAtual.charAt(0).toUpperCase() + temaAtual.slice(1);
-
-    mostrarPergunta();
-}
-
-function mostrarPergunta() {
-    if (indice >= perguntas.length) {
-        finalizarQuiz();
-        return;
+    if (jogo === "quiz") {
+        document.getElementById("quiz-menu").style.display = "block";
+    } else if (jogo === "memory") {
+        document.getElementById("memory-menu").style.display = "block";
     }
-
-    const atual = perguntas[indice];
-    document.getElementById("pergunta").textContent = atual.pergunta;
-    document.getElementById("btn-proxima").style.display = "none";
-
-    const altDiv = document.getElementById("alternativas");
-    altDiv.innerHTML = "";
-
-    atual.alternativas.forEach((alt, i) => {
-        const btn = document.createElement("button");
-        btn.textContent = alt;
-        btn.onclick = () => verificarResposta(i, btn);
-        altDiv.appendChild(btn);
-    });
-
-    const barra = document.getElementById("barra-progresso");
-    barra.style.width = `${(indice / perguntas.length) * 100}%`;
 }
 
-function verificarResposta(resp, botao) {
-    const atual = perguntas[indice];
-    const botoes = document.querySelectorAll("#alternativas button");
-
-    botoes.forEach(b => b.disabled = true);
-    botoes.forEach(b => b.classList.remove("correct", "wrong"));
-
-    if (resp === atual.correta) {
-        pontos++;
-        botao.classList.add("correct");
-    } else {
-        botao.classList.add("wrong");
-        botoes[atual.correta].classList.add("correct");
-    }
-
-    document.getElementById("btn-proxima").style.display = "block";
+// Seleciona tema para Memory
+function selecionarMemoryTema(tema) {
+    document.getElementById("memory-menu").style.display = "none";
+    document.getElementById("memory-dificuldade").style.display = "block";
+    temaMemory = tema;
 }
 
-function proximaPergunta() {
-    indice++;
-    mostrarPergunta();
-}
-
-function finalizarQuiz() {
-    document.getElementById("quiz").style.display = "none";
-    document.getElementById("resultadoFinal").style.display = "block";
-    document.getElementById("pontuacao").textContent = `Você acertou ${pontos} de ${perguntas.length}!`;
-}
-
+// Voltar ao menu principal
 function voltarMenu() {
     document.getElementById("menu").style.display = "block";
+    document.getElementById("quiz-menu").style.display = "none";
+    document.getElementById("dificuldade").style.display = "none";
+    document.getElementById("quiz").style.display = "none";
     document.getElementById("resultadoFinal").style.display = "none";
-    document.getElementById("tema-titulo").textContent = "Quiz LPS";
+    document.getElementById("memory-menu").style.display = "none";
+    document.getElementById("memory-dificuldade").style.display = "none";
+    document.getElementById("memory-game").style.display = "none";
+    document.getElementById("tema-titulo").textContent = "LPS Jogos";
 }
 </script>
 </body>
