--- a/front/index.html
+++ b/front/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container">
     <h1 id="tema-titulo">LPS Jogos</h1>
+    <p id="pontuacao-global">Pontuação total: 0</p>
 
     <!-- Menu principal -->
     <div id="menu" class="center">
@@ -102,7 +103,49 @@
 <script src="js/memory.js"></script>
 <script src="js/soletra.js"></script>
 <script>
+const API_URL = "https://quiz-lps.onrender.com";
+
 let jogoAtual = "";
+let usuarioId = null;
+
+// Gerar UUID simples
+function gerarUUID() {
+    return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+        const r = Math.random() * 16 | 0, v = c === 'x' ? r : (r & 0x3 | 0x8);
+        return v.toString(16);
+    });
+}
+
+// Inicializar usuário anônimo
+function inicializarUsuario() {
+    usuarioId = localStorage.getItem('usuarioId');
+    if (!usuarioId) {
+        usuarioId = gerarUUID();
+        localStorage.setItem('usuarioId', usuarioId);
+    }
+    atualizarPontuacaoGlobal();
+}
+
+// Buscar pontuação global
+async function atualizarPontuacaoGlobal() {
+    try {
+        const res = await fetch(`${API_URL}/pontuacao/${usuarioId}`);
+        const data = await res.json();
+        document.getElementById('pontuacao-global').textContent = `Pontuação total: ${data.pontuacao}`;
+    } catch (err) {
+        console.error("Erro ao buscar pontuação:", err);
+    }
+}
+
+// Adicionar pontos
+async function adicionarPontos(pontos) {
+    try {
+        await fetch(`${API_URL}/pontuacao/${usuarioId}/${pontos}`, { method: 'POST' });
+        atualizarPontuacaoGlobal();
+    } catch (err) {
+        console.error("Erro ao adicionar pontos:", err);
+    }
+}
 
 // Seleciona o jogo
 function selecionarJogo(jogo) {
@@ -139,6 +182,9 @@ function voltarMenu() {
     document.getElementById("soletra-game").style.display = "none";
     document.getElementById("tema-titulo").textContent = "LPS Jogos";
 }
+
+// Inicializar usuário ao carregar página
+inicializarUsuario();
 </script>
 </body>
 </html>
